--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head>
         <title>Empty project</title>
         <meta charset="utf-8">
+        <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" />
     </head>
     <body>
-        <div id="app"></div>
+        <div id="container"></div>
         <script src="./dist/bundle.js"></script>
     </body>
 </html>
