change script settings

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Empty project</title>
         <meta charset="utf-8">
-        <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" />
+        <script src="https://challenges.cloudflare.com/turnstile/v0/api.js?onload=onloadTurnstileCallback" />
     </head>
     <body>
         <div id="container"></div>
