--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Empty project</title>
         <meta charset="utf-8">
-        <script src="https://challenges.cloudflare.com/turnstile/v0/api.js?onload=onloadTurnstileCallback" defer></script>
+        <script src="https://challenges.cloudflare.com/turnstile/v0/api.js?onload=onloadTurnstileCallback"></script>
     </head>
     <body>
         <div style="height: 100vh; width: 100vw;">
