feat: add webpack build + fix widget size

--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Empty project</title>
-        <meta charset="utf-8">
-        <script src="https://challenges.cloudflare.com/turnstile/v0/api.js?onload=onloadTurnstileCallback"></script>
-    </head>
-    <body>
-        <div style="height: 100vh; width: 100vw;">
-            <div id="container"></div>
-        </div>
-        <script src="./dist/bundle.js"></script>
-    </body>
-</html>
+<!doctype html><html><head><title>Venga turnstile challenge</title><meta charset="utf-8"><script src="https://challenges.cloudflare.com/turnstile/v0/api.js?onload=onloadTurnstileCallback"></script><script defer="defer" src="main.bundle.3db0388d663c7cdab284.js"></script><link href="main.6ca1c13d97c68cd40f80.css" rel="stylesheet"></head><body><div style="height: 100vh; width: 100vw; display: flex; justify-content: center; align-items: center;"><div id="container"></div></div></body></html>
