try use other script

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Venga turnstile challenge</title>
         <meta charset="utf-8">
-        <script src="https://challenges.cloudflare.com/turnstile/v0/api.js?onload=onloadTurnstileCallback"></script>
+        <script src="https://challenges.cloudflare.com/turnstile/v0/api.js?render=explicit"></script>
     </head>
     <body>
         <div
